<resources>
    <string name="app_name">RuralCaravan</string>
    <string-array name="House_Type_English">
        <item>Please Select House Type</item>
        <item>Karvy</item>
        <item>Brick Stacked</item>
        <item>Brick and Concrete</item>
        <item>Other</item>
    </string-array>
    <string-array name="House_Type_Marathi">
        <item>कृपया घराचा प्रकार निवडा </item>
        <item>कार्वी</item>
        <item>विटांनी बांधलेले </item>
        <item>विटा आणि सिमेंटने बांधलेले</item>
        <item>इतर </item>
    </string-array>
    <string-array name="Roof_Type_English">
        <item>Please Enter Roof Type</item>
        <item>Plastic and Agriculture Barn</item>
        <item>Brick Roof(Non-Cimental)</item>
        <item>Asbestos Sheet</item>
        <item>Concrete</item>
        <item>Other</item>
    </string-array>
    <string-array name="Roof_Type_Marathi">
        <item>कृपया छताचा प्रकार निवडा</item>
        <item>प्लास्टिक आणि वखारनी बांधलेले</item>
        <item>विटांनी बांधलेले </item>
        <item>पत्रांनी बांधलेले </item>
        <item>सिमेंटने बांधलेले </item>
        <item>इतर </item>
    </string-array>
    <string name="Rs">\u20B9</string>
    <string name="language_selection">भाषा निवडा</string>
    <string name="marathi">मराठी</string>
    <string name="english">इंग्रजी</string>
    <string name="login">लॉगइन </string>
    <string name="username">युझरनेम</string>
    <string name="password">पासवर्ड</string>
    <string name="new_customer">नवीन ग्राहक</string>
    <string name="chullaha_construction_marathi">चूल बांधणी </string>
    <string name="remaining_payment_marathi">उर्वरीत रक्कम टाका</string>
    <string name="balance_payment_marathi">शिल्लक रक्कम </string>
    <string name="please_enter_username_marathi">कृपया युजरनेम टाका </string>
    <string name="save">जतन करा</string>
    <string name="house_survey_marathi">गृह आढावा</string>
    <string name="uploadfired_chulaphoto_marathi">पेटवलेल्या चुलीचा फोटो अपलोड करा </string>
    <string name="select_customer">ग्राहक निवडा</string>
    <string name="complete_remaining_construction_marathi">उर्वरीत बांधणी पूर्ण करा</string>
    <string name="kitchen_information">चुलीची माहिती</string>
    <string name="make_construction_team_marathi">बांधणी गट तयार करा</string>
    <string name="upload_kitchen_photo_marathi">चुलीचे फोटो अपलोड करा</string>
    <string name="construction_team_marathi">बांधणी गट</string>
    <string name="do_payment_marathi">पैसे जमा करा</string>
    <string name="complete_construction_team">बांधणी गट पूर्ण करा</string>
    <string name="add_new_construction_team_member_marathi">नवीन बांधणी गट सदस्य जोडा</string>
    <string name="construction_team_member_marathi">बांधणी गट सदस्य</string>
    <string name="construction_team_member_name">बांधणी गट सदस्याचे नाव टाका</string>
    <string name="construction_team_member_address">बांधणी गट सदस्याचा पत्ता टाका</string>
    <string name="construction_team_member_mobile">बांधणी गट सदस्याचा मोबाइल नंबर टाका</string>
    <string name="construction_team_member_age">बांधणी गट सदस्याचे वय टाका</string>
    <string name="construction_team_information_marathi">बांधणी गट माहिती</string>
    <string name="scan">स्कॅन करा</string>
    <string name="kitchen_construction">चूल बांधणी</string>
    <string name="half_costructed_chullha_image_marathi">अर्ध्या बांधलेल्या चुलीचा फोटो अपलोड करा</string>
    <string name="complete_costructed_chullha_image_marathi">पूर्ण बांधलेल्या चुलीचा फोटो अपलोड करा</string>
    <string name="fired_chullha_image_marathi">पेटवलेल्या चुलीचा फोटो अपलोड करू शकत नाही</string>
    <string name="take_payment">पैसे घ्या</string>
    <string name="costofchulha_marathi">चुलीची किंमत : </string>
    <string name="paid_marathi">भरले : </string>
    <string name="baki_paise">बाकी : </string>
    <string name="scan_aadhar_card">स्कॅन आधार कार्ड</string>
    <string name="unique_id">विशेष आयडी : </string>
    <string name="state">राज्य</string>
    <string name="city">शहर</string>
    <string name="village">गाव</string>
    <string name="enter_aadhar_number">आधार कार्ड नंबर टाका</string>
    <string name="enter_customer_name">ग्राहकाचे नाव टाका </string>
    <string name="enter_customer_address">ग्राहकाचा पत्ता टाका </string>
    <string name="enter_customer_mobile_number">ग्राहकाचा मोबाइल नंबर टाका </string>
    <string name="enter_customer_age">ग्राहकाचे वय टाका</string>
    <string name="male">पुरूष </string>
    <string name="female">महिला</string>
    <string name="please_select_house_type">कृपया घराचा प्रकार निवडा </string>
    <string name="please_select_roof_type">कृपया घराच्या छताचा प्रकार निवडा </string>
    <string name="kitchen_height">स्वयंपाकघराची उंची(फूट)</string>
    <string name="get_geo_location">भौगोलिक स्थान घ्या </string>
    <string name="take_image_of_planned_area">नियोजित चूल क्षेत्राचा फोटो घ्या</string>
    <string name="receipt_number_marathi">पावती नंबर टाका</string>
    <string name="cost_of_chullaha_marathi">चुलीची पूर्ण रक्कम टाका</string>
    <string name="paid_amount_marathi">जमा केलेली रक्कम टाका</string>
    <string name="enter_amount">रक्कम टाका </string>
    <string name="enter_remaining_amount">उर्वरीत रक्कम टाका </string>
    <string name="upload_payment_receipt_marathi">पैशाची पावती अपलोड करा </string>
    <string name="customer_information">ग्राहकाची माहिती</string>
    <string name="your_profile">तुमची माहिती</string>
    <string name="logout">बाहेर पडा </string>
    <string name="sync">समक्रमित करा</string>
    <string name="customer_registration">ग्राहकाची नोंदणी </string>
    <string name="scan_by_id_card">आयडी कार्ड स्कॅन करा </string>
    <string name="customer_agreement">ग्राहकाच्या पुढील पायऱ्या</string>
    <string name="no_customer_marathi">एकही ग्राहक उपलब्ध नाही </string>
    <string name="customer_list_marathi">ग्राहकाची यादी</string>
    <string name="menu_marathi">मेनू </string>
    <string name="upload_kitchen_marathi">चुलीची माहिती अपलोड करा</string>
    <string name="upload_payment_marathi">पैसे भरलेली माहिती अपलोड करा </string>
    <string name="remaing_chulha_customer_marathi">चुल बांधणी बाकी असलेले ग्राहक </string>
    <string name="remaing_payment_customer_marathi">पैसे बाकी असलेले ग्राहक </string>
    <string name="already_added_kitchen_marathi">चुलीची माहिती आधीच भरलेली आहे</string>
    <string name="please_add_atleast_one_team_member_marathi">कृपया आधी बांधणी गट सदस्यांची माहिती भरा</string>
    <string name="process_completed_cannot_add_team_member_marathi">प्रक्रिया पूर्ण झाली आहे. बांधणी गट सदस्यांची माहिती आता भरता येणार नाही  </string>
    <string name="add_kitchen_first_marathi">आधी चुलीची माहिती भरा</string>
    <string name="please_add_kitchen_details_marathi">कृपया चुलीची माहिती भरा</string>
    <string name="please_wait_marathi">कृपया थांबा</string>
    <string name="construction_team_data_added_successfully_marathi">बांधणी गट सदस्यांची माहिती यशस्वीरित्या भरली गेली आहे</string>
    <string name="ok_marathi">ठीक आहे</string>
    <string name="construction_team_data_failed_marathi">बांधणी गट सदस्यांची माहिती भरली गेली नाही</string>
    <string name="please_enter_construction_member_name_marathi">कृपया बांधणी गट सदस्याचे नाव टाका</string>
    <string name="please_enter_construction_member_age_marathi">कृपया बांधणी गट सदस्याचे वय टाका</string>
    <string name="please_enter_construction_member_address_marathi">कृपया बांधणी गट सदस्याचा पत्ता टाका</string>
    <string name="please_enter_construction_member_mobile_number_marathi">कृपया बांधणी गट सदस्याचा मोबाइल नंबर टाका</string>
    <string name="please_select_gender_marathi">कृपया बांधणी गट सदस्याचे लिंग निवडा </string>
    <string name="wait_uploading_data_marathi">कृपया थांबा माहिती अपलोड होत आहे</string>
    <string name="customer_added_successfully_marathi">ग्राहकाची माहिती यशस्वीरित्या भरली गेली आहे</string>
    <string name="customer_data_updated_marathi">ग्राहकाची माहिती बदली गेली आहे</string>
    <string name="take_photo_marathi">फोटो घ्या</string>
    <string name="choose_photo_from_gallery_marathi">गॅलरीतुन फोटो निवडा</string>
    <string name="cancel_marathi">रद्द करा</string>
    <string name="add_photo_marathi">फोटो टाका</string>
    <string name="please_enter_valid_aadhar_number_marathi">कृपया आधार नंबर बरोबर टाका</string>
    <string name="please_enter_customer_age_marathi">कृपया ग्राहकाचे वय टाका </string>
    <string name="please_enter_customer_name_marathi">कृपया ग्राहकाचे नाव टाका </string>
    <string name="please_enter_customer_address_marathi">कृपया ग्राहकाचा पत्ता टाका </string>
    <string name="please_enter_valid_mobile_number_marathi">कृपया ग्राहकाचा मोबाइल नंबर टाका</string>
    <string name="please_select_customer_gender_marathi">कृपया ग्राहकाचे लिंग निवडा</string>
    <string name="kitchen_construction_not_completed_marathi">चूल बांधणी पूर्ण झालेली नाही</string>
    <string name="please_complete_kitchen_construction_marathi">कृपया आधी चूल बांधणी पूर्ण करा</string>
    <string name="kitchen_not_added_marathi">चूलची माहिती भरलेली नाही </string>
    <string name="please_add_kitchen_marathi">कृपया चूलची माहिती भरा</string>
    <string name="kitchen_suitability_added_successfully_marathi">चुलीची माहिती यस्वीरित्या भरली गेली आहे</string>
    <string name="kitchen_successfully_uploaded_marathi">चुलीची माहिती यस्वीरित्या अपलोड झाली आहे</string>
    <string name="kitchen_data_updated_marathi">चुलीची माहिती बदली आहे</string>
    <string name="kitchen_data_added_successfully_marathi">चुलीची माहिती यस्वीरित्या भरली गेली आहे</string>
    <string name="kitchen_data_add_failed_marathi">चूलची माहिती भरली गेली नाही </string>
    <string name="please_upload_planned_area_image_marathi">नियोजित चूल क्षेत्राचा फोटो अपलोड करा </string>
    <string name="couldnot_get_location_marathi">नियोजित चूल क्षेत्राचे स्थान मिळाले नाही</string>
    <string name="please_try_again_marathi"> कृपया पुन्हा प्रयत्न करा</string>
    <string name="got_location_successfully_marathi">नियोजित चूल क्षेत्राचे स्थान मिळाले</string>
    <string name="please_enter_kitchen_height_marathi">कृपया चुलीच्या खोलीची उंची टाका </string>
    <string name="please_select_house_type_marathi">कृपया घराचा प्रकार निवडा </string>
    <string name="please_select_roof_type_marathi">कृपया घराचा छताचा प्रकार निवडा </string>
    <string name="unable_to_get_location_marathi">नियोजित चूल क्षेत्राचे स्थान मिळवता आले नाही </string>
    <string name="already_uploaded_step1_image_marathi">अर्ध्या बांधलेल्या चुलीचा फोटो आधीच अपलोड केलेला आहे</string>
    <string name="please_upload_step1_image_first_marathi">कृपया अर्ध्या बांधलेल्या चुलीचा फोटो आधी अपलोड करा  </string>
    <string name="process_completed_canot_upload_step2_image_marathi">प्रक्रिया पूर्ण झालेली आहे.पूर्ण  बांधलेल्या चुलीचा फोटो  अपलोड करू शकत नाही</string>
    <string name="upload_step2_image_marathi">पूर्ण बांधलेल्या चुलीचा फोटो अपलोड करा</string>
    <string name="planned_area_image_already_uploaded_marathi">नियोजित चूल क्षेत्राचा फोटो आधीच अपलोड केलेला आहे </string>
    <string name="image_uploaded_successfully_marathi">फोटो अपलोड झालेला आहे </string>
    <string name="image_upload_failed_marathi">फोटो अपलोड झालेला नाही</string>
    <string name="payment_details_added_successfully_marathi">पैसे जमा केलेली माहिती भरली गेली आहे</string>
    <string name="payment_details_add_failed_marathi">पैसे जमा केलेली माहिती भरली गेली नाही</string>
    <string name="please_upload_receipt_image_marathi">कृपया पैसे भरलेली पावतीचा फोटो अपलोड करा</string>
    <string name="amount_must_be_less_than_total_amount_marathi">रक्कम हि पूर्ण रक्कमेपेक्षा कमी हवी</string>
    <string name="login_successfully_marathi">लॉगिन यशस्वी</string>
    <string name="login_failed_marathi">लॉगिन अयशस्वी</string>
    <string name="customer_data_add_failed_marathi">ग्राहकाची माहिती भरली गेली नाही</string>
    <string name="success_marathi">यशस्वी</string>
    <string name="latitude_marathi">अक्षांश</string>
    <string name="longitude_marathi">रेखांश</string>
</resources>