<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context="com.hatchers.ruralcaravane.activity.LanguageSelectionFragment">

    <TextView
        android:layout_marginTop="150dp"
        android:id="@+id/select_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/language_selection"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:textStyle="bold" />





    
    <android.support.v7.widget.CardView
        android:layout_below="@id/select_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/marathi"
        android:text="@string/marathi"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/shape1"/>

    <Button
        android:layout_below="@id/marathi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/english"
        android:textColor="@color/colorWhite"
        android:text="@string/english"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape1"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
