<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context="com.hatchers.ruralcaravane.activity.LanguageSelectionActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

    <TextView
        android:id="@+id/select_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_selection"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:gravity="center"
        android:textStyle="bold" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="26dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/marathi"
                android:text="@string/marathi"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:background="@drawable/shape1"/>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_below="@id/marathi"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:id="@+id/english"
                android:textColor="@color/colorWhite"
                android:text="@string/english"
                android:textSize="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/shape1"/>



        </android.support.v7.widget.CardView>




    </LinearLayout>
</RelativeLayout>
