<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.hatchers.ruralcaravane.activity.MainMenus">

    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
        android:layout_height="54dp"
        android:id="@+id/mainMenus_toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorWhite">


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


    <LinearLayout
        android:background="@drawable/onclick_background"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/addCustomerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_weight="0.1"
        android:padding="5dp"
        android:src="@mipmap/newuser"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/new_customer"
        android:id="@+id/txt_add_new_customer"
        android:textSize="30dp"
        android:layout_marginLeft="20dp"
        android:gravity="start|center"
        android:textColor="@color/colorPrimary"/>


    </LinearLayout>


    <LinearLayout
        android:background="@drawable/onclick_background"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/constructChulhaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_weight="0.1"
            android:src="@mipmap/chullha"
            android:padding="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/chullaha_construction_marathi"
        android:textSize="30dp"
        android:layout_marginLeft="20dp"
        android:gravity="start|center"
        android:id="@+id/txt_const_chulha"
        android:textColor="@color/colorPrimary" />

    </LinearLayout>


    <LinearLayout
        android:background="@drawable/onclick_background"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/paymentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_weight="0.1"
            android:padding="5dp"
            android:src="@mipmap/payment"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/do_payment_marathi"
            android:textSize="30dp"
            android:layout_marginLeft="20dp"
            android:gravity="start|center"
            android:id="@+id/txt_collect_cash"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout" />


</RelativeLayout>
